Done with everything. Changed CC to non recursive so the benchmark wont crash