@@ -9,9 +9,8 @@ import java.util.*;
  * Created by Kristoffer on 2016-09-27.
  */
 public class MyDFS<E> implements graphs.DFS<E> {
-    private List<Node<E>> nodeList = new ArrayList<>();
+    private List<Node<E>> nodeList;
     private Set<Node<E>> visitedList = new HashSet<>();
-
     /**
      * Returns the nodes visited by a depth first search starting from
      * the given root node. Each visited node is also attached with
@@ -58,10 +57,9 @@ public class MyDFS<E> implements graphs.DFS<E> {
      */
     @Override
     public List<Node<E>> postOrder(DirectedGraph<E> g, Node<E> root) {
-        nodeList = new ArrayList<>();
+        nodeList = new LinkedList<>();
         visitedList.clear();
         postOrder(visitedList, nodeList, root);
-
         return nodeList;
     }
 
@@ -75,7 +73,7 @@ public class MyDFS<E> implements graphs.DFS<E> {
      */
     @Override
     public List<Node<E>> postOrder(DirectedGraph<E> g) {
-        nodeList = new ArrayList<>();
+        nodeList = new LinkedList<>();
         visitedList.clear();
 
         for (E item : g.allItems()){
@@ -96,7 +94,6 @@ public class MyDFS<E> implements graphs.DFS<E> {
      */
     @Override
     public boolean isCyclic(DirectedGraph<E> graph) {
-
         for (E item : graph.allItems()){
             Node<E> node = graph.getNodeFor(item);
             Iterator<Node<E>> it = node.succsOf();
@@ -117,7 +114,7 @@ public class MyDFS<E> implements graphs.DFS<E> {
     @Override
     public List<Node<E>> topSort(DirectedGraph<E> graph) {
         if (!isCyclic(graph)){
-            nodeList = new ArrayList<>();
+            nodeList = new LinkedList<>();
             visitedList.clear();
 
             for (E item : graph.allItems()){
@@ -155,11 +152,12 @@ public class MyDFS<E> implements graphs.DFS<E> {
         }
     }
 
-    private void stackDFS(ArrayDeque<Node<E>> stack, Set<Node<E>> visitedList, List<Node<E>> nodeList, Node<E> root){
-        stack.addFirst(root);
+    private void stackDFS(Set<Node<E>> visitedList, List<Node<E>> nodeList, Node<E> root){
+        List<Node<E>> stack = new LinkedList<>();
 
+        stack.add(root);
         while(!stack.isEmpty()){
-            Node<E> node = stack.removeFirst();
+            Node<E> node = stack.remove(0);
             if (!visitedList.contains(node)){
                 node.num = nodeList.size();
                 nodeList.add(node);
@@ -169,13 +167,12 @@ public class MyDFS<E> implements graphs.DFS<E> {
                 while(it.hasNext()){
                     Node<E> next = it.next();
                     if (!stack.contains(next) || !visitedList.contains(next)){
-                        stack.addFirst(next);
+                        stack.add(0, next);
                     }
                 }
             }
         }
     }
-
 
     private void postOrder(Set<Node<E>> visited, List<Node<E>> nodeList, Node<E> root){
         // Got help from http://eli.thegreenplace.net/2015/directed-graph-traversal-orderings-and-applications-to-data-flow-analysis/
